--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/xicon" href="./imagenes/logo.svg">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans:wght@300&display=swap"
         rel="stylesheet">
@@ -116,5 +117,4 @@
     </main>
     <script src="https://kit.fontawesome.com/9dacbea278.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
